--- a/1.0-tl-scientific-python.ipynb
+++ b/1.0-tl-scientific-python.ipynb
@@ -570,9 +570,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv-homework",
+   "display_name": "3dcv",
    "language": "python",
-   "name": "cv-homework"
+   "name": "3dcv"
   },
   "language_info": {
    "codemirror_mode": {
